# desafio_fake_ETL

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
data_generator/: mock_data.py
desafio_fake_etl/extract/: extract_data.py
desafio_fake_etl/load/: load_data.py
desafio_fake_etl/transform/: aggregate.py
utils/: utils_log.py
